--- a/app/assets/stylesheets/pages/_reference.scss
+++ b/app/assets/stylesheets/pages/_reference.scss
@@ -63,7 +63,9 @@
   /* 🔑 CORRECTION CLÉ : Contrôle la visibilité des slides */
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.3s, visibility 0.3s;
+  transition:
+    opacity 0.3s,
+    visibility 0.3s;
 }
 
 /* 🔑 CORRECTION CLÉ : Afficher UNIQUEMENT la slide active */
@@ -134,7 +136,9 @@
 // ----------
 
 .header-show {
-  transition: height 0.6s ease, background-color 0.3s ease;
+  transition:
+    height 0.6s ease,
+    background-color 0.3s ease;
   overflow: hidden;
   position: relative;
 }
@@ -567,7 +571,7 @@
   background-color: $secondary-color;
   color: $primary-color;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 //Validation
